--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <h2>Add New Player</h2>
             <form id="player-form">
                 <input type="text" id="player-name" placeholder="Player Name" required>
-                <input type="number" id="player-rating" value="1200">
+                <input type="number" id="player-rating" value="1200" required>
                 <button type="submit">Add Player</button>
             </form>
         </div>
@@ -75,6 +75,7 @@
 
             <button id="log-match" class="primary-button">Log Match</button>
 
+            <!-- Players List (Populated dynamically) -->
             <datalist id="players-list">
                 <!-- Will be populated with JavaScript -->
             </datalist>
